<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

<!--    <fragment-->
<!--        android:id="@+id/nav_transform"-->
<!--        android:name="id.ac.astra.polytechnic.trpab.ui.transform.TransformFragment"-->
<!--        android:label="@string/menu_transform"-->
<!--        tools:layout="@layout/fragment_transform" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_reflow"-->
<!--        android:name="id.ac.astra.polytechnic.trpab.ui.reflow.ReflowFragment"-->
<!--        android:label="@string/menu_reflow"-->
<!--        tools:layout="@layout/fragment_reflow" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="id.ac.astra.polytechnic.trpab.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->

    <fragment
        android:id="@+id/nav_settings"
        android:name="id.ac.astra.polytechnic.trpab.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_home"
        android:name="id.ac.astra.polytechnic.trpab.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_borrowing"
        android:name="id.ac.astra.polytechnic.trpab.ui.borrowing.BorrowingFragment"
        android:label="@string/menu_borrowing"
        tools:layout="@layout/fragment_borrowing" />

    <fragment
        android:id="@+id/nav_maintenance"
        android:name="id.ac.astra.polytechnic.trpab.ui.maintenance.MaintenanceFragment"
        android:label="@string/menu_maintenance"
        tools:layout="@layout/fragment_maintenance"/>

    <fragment
        android:id="@+id/nav_maintenance_process"
        android:name="id.ac.astra.polytechnic.trpab.ui.maintenance.MaintenanceProcessFragment"
        android:label="@string/menu_maintenance"
        tools:layout="@layout/fragment_maintenance_process" >
        <action
            android:id="@+id/action_to_improvementFragment"
            app:destination="@id/improvementFragment" />
        <action
            android:id="@+id/action_to_schadulefragment"
            app:destination="@id/schadulefragment" />
    </fragment>

    <fragment
        android:id="@+id/improvementFragment"
        android:name="id.ac.astra.polytechnic.trpab.ui.maintenance.ImprovementFragment"
        tools:layout="@layout/fragment_perbaikan" />

    <fragment
        android:id="@+id/nav_maintenance_history"
        android:name="id.ac.astra.polytechnic.trpab.ui.maintenance.MaintenanceHistoryFragment"
        android:label="@string/menu_maintenance"
        tools:layout="@layout/fragment_maintenance_history" />

    <fragment
        android:id="@+id/schadulefragment"
        android:name="id.ac.astra.polytechnic.trpab.ui.maintenance.SchaduleListFragment"
        tools:layout="@layout/fragment_schedulelist" >
        <action
            android:id="@+id/action_to_actionlistfragment"
            app:destination="@+id/actionlistfragment"/>
    </fragment>

    <fragment
        android:id="@+id/actionlistfragment"
        android:name="id.ac.astra.polytechnic.trpab.ui.maintenance.ActionSchaduleFragment"
        tools:layout="@layout/fragment_actionlist" >
        <action
            android:id="@+id/action_to_workmanshipDetailsFragment"
            app:destination="@id/workmanshipDetailsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/workmanshipDetailsFragment"
        android:name="id.ac.astra.polytechnic.trpab.ui.maintenance.WorkmanshipDetailsFragment"
        tools:layout="@layout/fragment_workmanshipdetails" />

</navigation>