<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".ui.activity.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/patern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/patern_login"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/patern_login"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/masuk"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="Masuk"
        android:textColor="@color/cream"
        android:fontFamily="@font/poppins_b"
        android:paddingStart="30dp"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/patern"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/selamatdatang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selamat Datang!"
        android:textColor="@color/cream"
        android:fontFamily="@font/poppins"
        android:paddingStart="30dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/masuk"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selamatdatang"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_card_view">

            <com.google.android.material.button.MaterialButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:enabled="false"
                app:icon="@drawable/ic_user"
                app:iconGravity="top"
                app:iconSize="30dp"
                app:iconTint="@color/cream" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:autofillHints="@string/prompt_username"
                android:backgroundTint="@color/cream"
                android:backgroundTintMode="src_in"
                android:fontFamily="@font/poppins"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColor="@color/cream"
                android:textColorHighlight="@color/cream"
                android:textColorHint="@color/cream"
                android:text="randy.p"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_card_view">

            <com.google.android.material.button.MaterialButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:enabled="false"
                app:icon="@drawable/ic_lock"
                app:iconGravity="top"
                app:iconSize="28dp"
                app:iconTint="@color/cream" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:autofillHints="@string/prompt_password"
                android:backgroundTint="@color/cream"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/cream"
                android:textColorHighlight="@color/cream"
                android:textColorHint="@color/cream"
                android:text="randy"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:id="@+id/username"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:autofillHints="@string/prompt_username"-->
<!--        android:backgroundTint="@color/cream"-->
<!--        android:backgroundTintMode="src_in"-->
<!--        android:fontFamily="@font/poppins"-->
<!--        android:hint="@string/prompt_username"-->
<!--        android:inputType="text"-->
<!--        android:selectAllOnFocus="true"-->
<!--        android:textColor="@color/cream"-->
<!--        android:textColorHighlight="@color/cream"-->
<!--        android:textColorHint="@color/cream"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/selamatdatang" />-->

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginRight="30dp"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:autofillHints="@string/prompt_password"-->
<!--            android:backgroundTint="@color/cream"-->
<!--            android:hint="@string/prompt_password"-->
<!--            android:textColor="@color/cream"-->
<!--            android:textColorHighlight="@color/cream"-->
<!--            android:textColorHint="@color/cream"-->
<!--            android:imeActionLabel="@string/action_sign_in_short"-->
<!--            android:imeOptions="actionDone"-->
<!--            android:inputType="textPassword"-->
<!--            android:selectAllOnFocus="true"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:fontFamily="@font/poppins"-->
<!--            app:layout_constraintTop_toBottomOf="@id/username" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="Login"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_b"
        android:textSize="20sp"
        android:textColor="@color/red_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/cream"
        app:cornerRadius="20dp"
        app:rippleColor="@color/red_secondary"
        android:textSelectHandle="@color/cream"
        app:layout_constraintVertical_bias="0.2"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/poppins"
        android:gravity="center|bottom"
        android:text="Copyright © 2024 HeroAppDeveloper | All Rights Reserved"
        android:textColor="@color/cream"
        android:textSize="9sp"
        app:layout_constraintTop_toBottomOf="@id/login"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
